refactor(client): 优化 API客户端相关代码
- 添加序列化 ID 以提高性能- 移除冗余的异常处理
- 使用更简洁的 Lambda 表达式
- 修复了一些潜在的 NPE 问题- 优化了 API 签名和查询参数处理逻辑